src-liberty_parse-2.6/test/example.2pin.ref



reading example.2pin.lib...
ERROR: example.2pin.lib:34: The group name A is already being used in this context. (Syntax Error Encountered)
ERROR: example.2pin.lib:34: The group name B is already being used in this context. (Syntax Error Encountered)
... Done. 


Checking the database...

NOTE: The technology cmos was specified.
NOTE: No delay_model attribute specified in the library; the delay_model 'generic_cmos' is assumed.
NOTE: Using the cmos syntax tables...
Passed

... Done. 


Stats:


Library example:
   cells: 2

Quitting..
Done....
